# litetorch

./: .gitattributes  .gitignore  CMakeLists.txt  README.md
apps/: mlp_resnet.py  simple_ml.py
python/litetorch/: __init__.py  autograd.py  backend_numpy.py  backend_selection.py  optim.py
python/litetorch/backend_ndarray/: ndarray.py  ndarray_backend_numpy.py
python/litetorch/data/: __init__.py  data_basic.py  data_transforms.py
python/litetorch/init/: init_basic.py  init_initializers.py
python/litetorch/nn/: nn_basic.py  nn_conv.py
python/litetorch/ops/: ops_logarithmic.py  ops_mathematic.py  ops_tuple.py
src/: ndarray_backend_cpu.cc  ndarray_backend_cuda.cu
tests/: test_autograd.py  test_conv.py  test_nd_backend.py  test_ndarray.py  test_nn_and_optim.py
